--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>fortune-config</name>
+	<name>config-server</name>
 	<description>Spring Boot and Cloud Workshop Config Server App</description>
 
 	<parent>
